# cpp-exercises

./: .gitignore  CMakeLists.txt  deck_of_cards.cpp  deck_of_cards.hpp  deck_of_cards_test.cc  main.cpp  matrix.cpp  matrix.hpp
notes/: basics.md  pointers-references.md
